# tomat

./: .editorconfig  .env.example  .gitattributes  .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPY.md  Cargo.toml  DEVELOPMENT.md  EXTERNAL.md  NOTICE.md  README.md  SECURITY.md  deno.json  package.json  renovate.json  tsconfig.json  uno.config.ts  vite.config.ts
.astro/: content.d.ts
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: feature-requests.yml  improvement-suggestions.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: ci.yml  release.yml
scripts/: build-android.ts  build-bun.mjs  build-client.ts  build-core.ts  build-ios.ts  build-release-bundle.ts  build.ts  check.ts  clean.ts  dev.ts  fetch-required-files.mjs  fmt-web.ts  lint-walkers.ts  pkg.ts  test-e2e-headless.ts  test-e2e.ts  test-ui.ts
scripts/catalog/: build.ts  gather-hashes.ts  probe.ts
scripts/install/: client-uninstall.ps1  client-uninstall.sh  client.ps1  client.sh  core-uninstall.ps1  core-uninstall.sh  core.ps1  core.sh  verify.test.ts
scripts/lint-plugins/: check-builtin-palette-color.ts  check-component-tiers.ts  check-em-dash.ts  check-icon-classes.ts  check-primitive-coverage.ts  check-shared-ui-purity.ts  check-shell-scripts.ts  check-tauri-imports-svelte.ts  check-uppercase-tomat.ts  check-view-coverage.ts  check-website-composer.ts  client-deno.json  oxlint-plugin.ts  tauri-boundary.ts
scripts/release/: all-targets.ts  android-toolchain.ts  android.ts  apple-toolchain.ts  artifacts.ts  client.ts  (+22 more)
src/: app.css
src-bun/: httpError.ts  index.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/binaries/: checksums.json  versions.json
src-tauri/icons/: icon.icns
src-tauri/resources/toolkits/: toolkits.d.ts
src-tauri/resources/toolkits/download_url/: index.ts
src-tauri/src/: commands.rs  lib.rs  sidecar.rs  state.rs  types.rs  utils.rs
src-tauri/src/commands/: mod.rs  session.rs  settings.rs  snippets.rs  storage.rs
static/: region-capture.html  region-capture.js
tests/: README.md
(+265 files in other folders)
