[workspace]
resolver = "2"
members = [
  "packages/tomat-client/src/tauri",
  "packages/tomat-core-keychain",
  "packages/tomat-core-updater",
]
# `reference/` is a local-only, git-ignored area (e.g. old app versions kept for
# reference); keep anything inside it out of the workspace.
exclude = ["reference"]

# Single shared release profile for every Rust crate. In a workspace the member
# crates' own [profile.*] sections are ignored, and `lto`/`panic` can't be
# overridden per-package — only `opt-level` can. So the helpers inherit the
# workspace's thin LTO + abort and just drop their opt-level to "z" below.
[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

# The keychain/updater helpers ship as tiny standalone binaries — squeeze size.
[profile.release.package.tomat-core-keychain]
opt-level = "z"

[profile.release.package.tomat-core-updater]
opt-level = "z"
