[package]
name = "tomat"
version = "0.1.0"
description = "A local-first modular AI client"
authors = ["rzkyif"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tomat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2.0.0"
tauri-plugin-http = "2"
reqwest = { version = "0.12", features = ["stream"] }
url = "2"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
anytomd = "1.2.1"
pdf-extract = "0.10.0"
tauri-plugin-dialog = "2.7.0"
xcap = "0.9.4"
image = "0.25"
base64 = "0.22"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

